# SysProg

./: Automat.cpp  Automat.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Dokumentation.docx  Information.cpp  Information.h  InformationLinkedList.cpp  InformationLinkedList.h  LinkedList.cpp  LinkedList.h  Scanner.cpp  Scanner.h  StringTable.cpp  StringTable.h  Symtable.cpp  Symtable.h  TestAutomat.cpp  TestAutomat.h  TokenList.cpp  TokenList.h  beispieltest.txt  beispieltest2.txt  input_code.txt  main.cpp  main_ScannerOnly.cpp  out.txt
AST/: ASTLinkedList.cpp  ASTLinkedList.h  ASTNode.cpp  ASTNode.h  AbstractSyntaxTree.cpp  AbstractSyntaxTree.h
AST/ASTBuild/: ASTCreator.cpp  ASTCreator.h  ASTStack.cpp  ASTStack.h
Scanner/: Automat.cpp  Automat.h  Buffer.h  Information.cpp  Information.h  Scanner.h  StringTable.cpp  StringTable.h  Symtable.h  main_ScannerOnly.cpp
lib/: Link_List.h  Stack.h
parser/: CodeBuilder.cpp  CodeBuilder.h  Link_List.cpp  Link_List.h  generateasb.cpp  generateasb.h
parser/AST/: ASTNode.cpp  ASTNode.h
parser/AST/ASTBuild/: ASTCreator.cpp  ASTCreator.h  ASTStack.cpp  ASTStack.h
tests/: Link_List_Test.cpp  Link_List_Test.h  ScannerTest.cpp  ScannerTest.h
